// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render color 1`] = `
<div
  class="wp-components-badge css-358ym0"
  data-g2-c16t="true"
  data-g2-component="Badge"
>
  <span
    class="wp-components-truncate wp-components-text css-1y3m43u"
    data-g2-c16t="true"
    data-g2-component="Text"
  >
    Status
  </span>
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="wp-components-badge css-teaedw"
  data-g2-c16t="true"
  data-g2-component="Badge"
>
  <span
    class="wp-components-truncate wp-components-text css-1y3m43u"
    data-g2-c16t="true"
    data-g2-component="Text"
  >
    Status
  </span>
</div>
`;

exports[`props should render display 1`] = `
<div
  class="wp-components-badge css-5sfyxc"
  data-g2-c16t="true"
  data-g2-component="Badge"
>
  <span
    class="wp-components-truncate wp-components-text css-1y3m43u"
    data-g2-c16t="true"
    data-g2-component="Text"
  >
    Status
  </span>
</div>
`;

exports[`props should render isBold 1`] = `
<div
  class="wp-components-badge css-17g1cfj"
  data-g2-c16t="true"
  data-g2-component="Badge"
>
  <span
    class="wp-components-truncate wp-components-text css-1y3m43u"
    data-g2-c16t="true"
    data-g2-component="Text"
  >
    Status
  </span>
</div>
`;

exports[`props should render isRounded 1`] = `
<div
  class="wp-components-badge css-1ornpr8"
  data-g2-c16t="true"
  data-g2-component="Badge"
>
  <span
    class="wp-components-truncate wp-components-text css-1y3m43u"
    data-g2-c16t="true"
    data-g2-component="Text"
  >
    Status
  </span>
</div>
`;

exports[`props should render truncate 1`] = `
<div
  class="wp-components-badge css-teaedw"
  data-g2-c16t="true"
  data-g2-component="Badge"
>
  <span
    class="wp-components-truncate wp-components-text css-1y3m43u"
    data-g2-c16t="true"
    data-g2-component="Text"
  >
    Status
  </span>
</div>
`;
